<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_about">About</string>
    <string name="add_gear">Add Gear</string>
    <string name="add_skill">Add Skill</string>
    <string name="agility_tag">AG</string>
    <string name="app_name">GenAssistant</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archetype">Archetype</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brawn_tag">BR</string>
    <string name="career">Career</string>
    <string name="career_column_content">Career</string>
    <string name="career_column_head">Career</string>
    <string name="char_select_head">Select a Character:</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="combat_skills">Combat</string>
    <string name="create_button">Create Character</string>
    <string name="cunning_tag">CUN</string>
    <string name="delete">Delete</string>
    <string name="dice_column_content">test</string>
    <string name="dice_column_head">Dice</string>
    <string name="disclaimer">GenAssistant, developed by Julian Woo, is an unofficial companion app for the Genesys system by Fantasy Flight Games.\10\10Contact: julian.wooville@gmail.com\10\10Disclaimer: This app bears no official affiliation with Fantasy Flight Publishing Inc. Fantasy Flight Games and the FFG logo are trademarks of Fantasy Flight Publishing Inc. All rights reserved to their respective owners.</string>
    <string name="edit">Edit</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="gear_description">Gear Description:</string>
    <string name="general_skills">General</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="image_select_text">Select an image by tapping above:</string>
    <string name="intellect_tag">INT</string>
    <string name="knowledge_skills">Knowledge</string>
    <string name="magic_skills">Magic</string>
    <string name="mot_des_hint">Desire</string>
    <string name="mot_fear_hint">Fear</string>
    <string name="mot_flaw_hint">Flaw</string>
    <string name="mot_str_hint">Strength</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="presence_tag">PR</string>
    <string name="rank_column_content">test</string>
    <string name="rank_column_head">Rank</string>
    <string name="save_edit_button">Save Edits</string>
    <string name="search_menu_title">Search</string>
    <string name="skills_column_content_com">Brawl (BR)\10Gunnery (AG)\10Melee (BR)\10Melee (Heavy) (BR)\10Melee (Light) (BR)\10Ranged (AG)\10Ranged (Heavy) (AG)\10Ranged (Light) (AG)</string>
    <string name="skills_column_content_gen">Alchemy (INT)\10Astrocartography (INT)\10Athletics (BR)\10Computers (INT)\10Computers (Hacking) (INT)\10Computers (Sysops) (INT)\10Cool (PR)\10Coordination (AG)\10Driving (AG)\10Mechanics (INT)\10Medicine (INT)\10Operating (INT)\10Perception (CUN)\10Piloting (AG)\10Resilience (BR)\10Riding (AG)\10Skulduggery (CUN)\10Stealth (AG)\10Streetwise (CUN)\10Survival (CUN)\10Vigilance (WILL)</string>
    <string name="skills_column_content_kno">Knowledge (INT)\10Knowledge Adventuring (INT)\10Knowledge Forbidden (INT)\10Knowledge Geography (INT)\10Knowledge Lore (INT)\10Knowledge (Science) (INT)\10Knowledge (Society) (INT)\10Knowledge (The Net) (INT)</string>
    <string name="skills_column_content_mag">Arcana (INT)\10Divine (WILL)\10Primal (CUN)\10Runes (INT)\10Verse (PR)</string>
    <string name="skills_column_content_soc">Charm (PR)\10Coercion (WILL)\10Deception (CUN)\10Leadership (PR)\10Negotiation (PR)</string>
    <string name="skills_column_head">Skill</string>
    <string name="social_skills">Social</string>
    <string name="start_edit_button">Edit Character</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strain">Strain</string>
    <string name="strain_current">Current Strain</string>
    <string name="strain_threshold">Strain Threshold</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Skills</string>
    <string name="tab_text_3">Talents</string>
    <string name="tab_text_4">Motivations</string>
    <string name="tab_text_5">Gear</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_char_edit">Edit Character</string>
    <string name="title_activity_char_info">CharInfo</string>
    <string name="willpower_tag">WILL</string>
    <string name="wound">Wounds</string>
    <string name="wound_current">Current Wounds</string>
    <string name="wound_threshold">Wound Threshold</string>
    <string name="xp">Experience</string>
</resources>
