<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <RelativeLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/disp_char_img" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="400dp" android:scaleType="centerCrop"/>
        <TableLayout android:id="@+id/characteristic_table_disp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:stretchColumns="0,1,2,3,4,5" android:layout_below="@+id/disp_char_img">
            <TableRow>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0" android:text="@string/brawn_tag" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="1" android:text="@string/agility_tag" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="2" android:text="@string/intellect_tag" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="3" android:text="@string/cunning_tag" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="4" android:text="@string/willpower_tag" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="5" android:text="@string/presence_tag" android:layout_weight="0.167"/>
            </TableRow>
            <TableRow>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/br_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="0"/>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/ag_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="1"/>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/int_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="2"/>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/cun_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="3"/>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/will_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="4"/>
                <TextView android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/pr_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_column="5"/>
            </TableRow>
        </TableLayout>
        <TableLayout android:id="@+id/wound_table_disp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:stretchColumns="0,1" android:layout_below="@+id/characteristic_table_disp">
            <TableRow>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0" android:text="@string/wound_threshold" android:layout_weight="0.167"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="1" android:text="@string/wound_current" android:layout_weight="0.167"/>
            </TableRow>
            <TableRow>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/wound_disp" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/wound_current_disp" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0"/>
            </TableRow>
        </TableLayout>
        <TableLayout android:id="@+id/strain_table_disp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:stretchColumns="0,1" android:layout_below="@+id/wound_table_disp">
            <TableRow>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0" android:text="@string/strain_threshold"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="1" android:text="@string/strain_current"/>
            </TableRow>
            <TableRow>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/strain_disp" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/strain_current_disp" android:layout_width="0dp" android:layout_margin="1dp" android:layout_column="0"/>
            </TableRow>
        </TableLayout>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/notes_disp_head" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notes" android:layout_below="@+id/strain_table_disp"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="italic" android:textColor="@android:color/black" android:id="@+id/notes_disp_body" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_below="@+id/notes_disp_head"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/xp_disp" android:background="@color/colorPrimary" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="20dp" android:text="XP: 100" android:layout_below="@+id/notes_disp_body" android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>
